--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ section pre[class^="language-"] {
 }
 
 div[class$="contentContainer"] {
-  padding: 2.5rem;
+  padding: 3.5rem;
+  line-height: 1.6rem;
 }
 
 .mermaid {
